--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
